# edge-ai-mlops-smart-irrigation-esp32

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: oneclick-workflow.yml
coleta_dados/: coleta_dados.py  dados_climaticos_tratados.csv  ia_params.h  metrics.txt  model.pkl  pesos_bias.json  requirements.txt  treinar_modelo.py
esp32_firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32_firmware/data/: dados_temperatura.csv
esp32_firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  main.c
esp32_firmware/main/components/ia/: ia.c  ia_infer.h
esp32_firmware/main/decider/: decider.c  decider.h
esp32_firmware/main/forecast/: forecast.c  forecast.h  time_utils.h
esp32_firmware/main/ia/: ia.c  ia_infer.h
esp32_firmware/main/ota/: ota_server.c  ota_server.h
esp32_firmware/main/pump/: pump.c  pump.h
esp32_firmware/main/sensores/dht22/: dht.c  dht.h
esp32_firmware/main/sensores/moisture/: moisture.h
esp32_firmware/main/sensors/adc_shared/: adc_shared.c  adc_shared.h
esp32_firmware/main/sensors/dht22/: dht.c  dht.h
esp32_firmware/main/sensors/ldr/: ldr.c  ldr.h
esp32_firmware/main/sensors/moisture/: moisture.c  moisture.h
esp32_firmware/main/wifi/: wifi.c  wifi.h
main/: CMakeLists.txt  main.c
main/sensores/dht22/: dht.c  dht.h
main/sensores/ldr/: ldr.h
main/sensores/moisture/: moisture.c
plantuml/: diagramaDeAtividadesEsp32Firmware.puml  diagramaDeClassesEsp32Firmware.puml  diagramaDeClassesTreinoExterno.puml  diagramaDeSequenciaEsp32Firmware.puml  diagramaDeSequenciaTreinoExterno.puml  pacotes.puml
treinamento_externo/: .gitignore  coleta_dados.py  scaler.pkl
