idf_component_register(
    SRCS
        "main.c"
        "forecast/forecast.c"
        "decider/decider.c"
        "pump/pump.c"
        "sensors/dht22/dht.c"
        "sensors/ldr/ldr.c"
        "sensors/moisture/moisture.c"
        "ia/ia.c"
    INCLUDE_DIRS
        "."
        "forecast"
        "decider"
        "pump"
        "ia"
        "sensors/dht22"
        "sensors/ldr"
        "sensors/moisture"
    REQUIRES
        driver
        esp_timer
)
