idf_component_register(
  SRCS
    "main.c"
    "pump/pump.c"
    "sensors/adc_shared/adc_shared.c"
    "sensors/ldr/ldr.c"
    "sensors/moisture/moisture.c"
    "sensors/dht22/dht.c"
    "decider/decider.c"
    "forecast/forecast.c"
    "ia/ia.c"
  INCLUDE_DIRS
    "."
    "pump"
    "sensors/adc_shared"
    "sensors/ldr"
    "sensors/moisture"
    "sensors/dht22"
    "decider"
    "forecast"
    "ia"
  REQUIRES
    driver
    esp_timer
    esp_adc
)
